Added application Log functionalities

--- a/ClientManagementService/appsettings.json
+++ b/ClientManagementService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local); initial catalog=ClientManagementDB; integrated security=true"
+    "DefaultConnection": "Server=(local);user id=sa;password=bkb123; initial catalog=ClientManagementDB; integrated security=true"
   },
   "Logging": {
     "LogLevel": {
